--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,41 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* text-align: center; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.box{
+  /* border: 2px solid red; */
+  text-align: center;
+  width: 200px;
+  height: 100px;
+  background-color: rgb(243, 241, 239);
+}
+.btn1{
+  border: none;
+  position: relative;
+  right: 50px;
+  top: 20px;
+  padding: 15px 25px;
+  background-color: antiquewhite;
+}
+
+.h1{
+  /* border: 2px solid red; */
+  position: relative;
+  bottom: 50px;
+}
+
+.btn2{
+  border: none;
+  position: relative;
+  left: 50px;
+  bottom: 115px;
+  padding: 13px 25px;
+  background-color: antiquewhite;
 }
